--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: '3.8'
 services:
+  db:
+    image: mysql:8.0.21
+    container_name: SS_mysql-container
+    hostname: SS_mysql-server
+    env_file:
+      - ./environments/db.env
+    networks:
+      - SS_network
+    volumes:
+      - db-data:/var/lib/mysql
+      - ./logs:/var/log/mysql
+      - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
   app:
     build:
       context: .
@@ -8,6 +20,8 @@ services:
     env_file:
       - ./environments/db.env
     command: bundle exec puma -C config/puma.rb
+    networks:
+      - SS_network
     volumes:
       - .:/webapp
       - public-data:/webapp/public
@@ -15,29 +29,44 @@ services:
       - log-data:/webapp/log
     depends_on:
       - db
-  db:
-    image: mysql:8.0.21
-    container_name: SS_mysql-container
-    hostname: SS_mysql-server
-    env_file:
-      - ./environments/db.env
-    volumes:
-      - db-data:/var/lib/mysql
-      - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
   web:
     build:
       context: ./nginx
     container_name: SS_nginx-container
     hostname: SS_nginx-server
+    networks:
+      - SS_network
     volumes:
       - public-data:/webapp/public
       - tmp-data:/webapp/tmp
     ports:
-      - 8080:8080
+      - 8080:80
     depends_on:
       - app
+
+# ネットワーク定義
+networks:
+  default:
+    external:
+      name: bridge
+  SS_network:
+    name: SS_docker.internal
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: "172.20.100.0/24"
+# volume定義
 volumes:
-  public-data:
-  tmp-data:
-  log-data:
   db-data:
+    name: SS_db-data
+    driver: local
+  public-data:
+    name: SS_public-data
+    driver: local
+  tmp-data:
+    name: SS_tmp-data
+    driver: local
+  log-data:
+    name: SS_tmp-data
+    driver: local
